CMPL2/COMP_PROJET/src/projetParser.java
// $ANTLR 3.5 H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g 2015-04-09 10:41:39
           
import java.io.IOException;
import java.io.DataInputStream;
import java.io.FileInputStream;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class projetParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "ML_COMMENT", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "':'", "':='", "';'", 
		"'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'alors'", "'aut'", "'bool'", 
		"'cond'", "'const'", "'debut'", "'def'", "'div'", "'ecrire'", "'ent'", 
		"'et'", "'faire'", "'fait'", "'faux'", "'fcond'", "'fin'", "'fixe'", "'fsi'", 
		"'lire'", "'mod'", "'module'", "'non'", "'ou'", "'proc'", "'programme'", 
		"'ref'", "'si'", "'sinon'", "'ttq'", "'var'", "'vrai'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int ML_COMMENT=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projetParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g"; }



	 
	// variables globales et methodes utiles a placer ici
	  



	// $ANTLR start "unite"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:35:1: unite : ( unitprog EOF | unitmodule EOF );
	public final void unite() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:35:8: ( unitprog EOF | unitmodule EOF )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==48) ) {
				alt1=1;
			}
			else if ( (LA1_0==44) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:35:12: unitprog EOF
					{
					pushFollow(FOLLOW_unitprog_in_unite62);
					unitprog();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite65); 
					PtGen.afftabSymb(); PtGen.pt(123); 
					}
					break;
				case 2 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:36:12: unitmodule EOF
					{
					pushFollow(FOLLOW_unitmodule_in_unite80);
					unitmodule();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite83); 
					PtGen.afftabSymb(); PtGen.pt(123); 
					}
					break;

			}
		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unite"



	// $ANTLR start "unitprog"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:39:1: unitprog : 'programme' ident ':' declarations corps ;
	public final void unitprog() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:40:3: ( 'programme' ident ':' declarations corps )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:40:5: 'programme' ident ':' declarations corps
			{
			PtGen.pt(54);
			match(input,48,FOLLOW_48_in_unitprog102); 
			PtGen.pt(47);
			pushFollow(FOLLOW_ident_in_unitprog106);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitprog108); 
			pushFollow(FOLLOW_declarations_in_unitprog115);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_corps_in_unitprog122);
			corps();
			state._fsp--;

			 System.out.println("succes, arret de la compilation "); 
			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitprog"



	// $ANTLR start "unitmodule"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:45:1: unitmodule : 'module' ident ':' declarations ;
	public final void unitmodule() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:46:3: ( 'module' ident ':' declarations )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:46:5: 'module' ident ':' declarations
			{
			PtGen.pt(54);
			match(input,44,FOLLOW_44_in_unitmodule141); 
			PtGen.pt(48);
			pushFollow(FOLLOW_ident_in_unitmodule145);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitmodule147); 
			pushFollow(FOLLOW_declarations_in_unitmodule155);
			declarations();
			state._fsp--;

			PtGen.pt(52);
			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitmodule"



	// $ANTLR start "declarations"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:50:1: declarations : ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? ;
	public final void declarations() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:3: ( ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:5: ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )?
			{
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:5: ( partiedef )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==30) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:5: partiedef
					{
					pushFollow(FOLLOW_partiedef_in_declarations173);
					partiedef();
					state._fsp--;

					}
					break;

			}

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:16: ( partieref )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==49) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:16: partieref
					{
					pushFollow(FOLLOW_partieref_in_declarations176);
					partieref();
					state._fsp--;

					}
					break;

			}

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:27: ( consts )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==28) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:27: consts
					{
					pushFollow(FOLLOW_consts_in_declarations179);
					consts();
					state._fsp--;

					}
					break;

			}

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:35: ( vars )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==53) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:35: vars
					{
					pushFollow(FOLLOW_vars_in_declarations182);
					vars();
					state._fsp--;

					}
					break;

			}

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:41: ( decprocs )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==47) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:51:41: decprocs
					{
					pushFollow(FOLLOW_decprocs_in_declarations185);
					decprocs();
					state._fsp--;

					}
					break;

			}

			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "partiedef"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:54:1: partiedef : 'def' ident ( ',' ident )* ptvg ;
	public final void partiedef() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:55:3: ( 'def' ident ( ',' ident )* ptvg )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:55:5: 'def' ident ( ',' ident )* ptvg
			{
			match(input,30,FOLLOW_30_in_partiedef202); 
			pushFollow(FOLLOW_ident_in_partiedef204);
			ident();
			state._fsp--;

			PtGen.pt(53);
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:55:33: ( ',' ident )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==13) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:55:34: ',' ident
					{
					match(input,13,FOLLOW_13_in_partiedef209); 
					pushFollow(FOLLOW_ident_in_partiedef211);
					ident();
					state._fsp--;

					PtGen.pt(53);
					}
					break;

				default :
					break loop7;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partiedef218);
			ptvg();
			state._fsp--;

			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partiedef"



	// $ANTLR start "partieref"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:58:1: partieref : 'ref' specif ( ',' specif )* ptvg ;
	public final void partieref() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:58:10: ( 'ref' specif ( ',' specif )* ptvg )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:58:12: 'ref' specif ( ',' specif )* ptvg
			{
			match(input,49,FOLLOW_49_in_partieref230); 
			pushFollow(FOLLOW_specif_in_partieref233);
			specif();
			state._fsp--;

			PtGen.pt(49);
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:58:42: ( ',' specif )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==13) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:58:43: ',' specif
					{
					match(input,13,FOLLOW_13_in_partieref238); 
					pushFollow(FOLLOW_specif_in_partieref240);
					specif();
					state._fsp--;

					PtGen.pt(49);
					}
					break;

				default :
					break loop8;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partieref248);
			ptvg();
			state._fsp--;

			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partieref"



	// $ANTLR start "specif"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:1: specif : ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? ;
	public final void specif() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:9: ( ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:11: ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )?
			{
			pushFollow(FOLLOW_ident_in_specif262);
			ident();
			state._fsp--;

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:17: ( 'fixe' '(' type ( ',' type )* ')' )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==40) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:19: 'fixe' '(' type ( ',' type )* ')'
					{
					match(input,40,FOLLOW_40_in_specif266); 
					match(input,9,FOLLOW_9_in_specif268); 
					pushFollow(FOLLOW_type_in_specif270);
					type();
					state._fsp--;

					PtGen.pt(50);
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:51: ( ',' type )*
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==13) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:61:53: ',' type
							{
							match(input,13,FOLLOW_13_in_specif276); 
							pushFollow(FOLLOW_type_in_specif278);
							type();
							state._fsp--;

							PtGen.pt(50);
							}
							break;

						default :
							break loop9;
						}
					}

					match(input,10,FOLLOW_10_in_specif285); 
					}
					break;

			}

			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:62:17: ( 'mod' '(' type ( ',' type )* ')' )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==43) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:62:19: 'mod' '(' type ( ',' type )* ')'
					{
					match(input,43,FOLLOW_43_in_specif309); 
					match(input,9,FOLLOW_9_in_specif312); 
					pushFollow(FOLLOW_type_in_specif314);
					type();
					state._fsp--;

					PtGen.pt(51);
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:62:51: ( ',' type )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==13) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:62:53: ',' type
							{
							match(input,13,FOLLOW_13_in_specif320); 
							pushFollow(FOLLOW_type_in_specif322);
							type();
							state._fsp--;

							PtGen.pt(51);
							}
							break;

						default :
							break loop11;
						}
					}

					match(input,10,FOLLOW_10_in_specif329); 
					}
					break;

			}

			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "specif"



	// $ANTLR start "consts"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:65:1: consts : 'const' ( ident '=' valeur ptvg )+ ;
	public final void consts() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:65:9: ( 'const' ( ident '=' valeur ptvg )+ )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:65:11: 'const' ( ident '=' valeur ptvg )+
			{
			match(input,28,FOLLOW_28_in_consts347); 
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:65:19: ( ident '=' valeur ptvg )+
			int cnt13=0;
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( (LA13_0==ID) ) {
					alt13=1;
				}

				switch (alt13) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:65:21: ident '=' valeur ptvg
					{
					pushFollow(FOLLOW_ident_in_consts351);
					ident();
					state._fsp--;

					PtGen.pt(1);
					match(input,21,FOLLOW_21_in_consts355); 
					pushFollow(FOLLOW_valeur_in_consts357);
					valeur();
					state._fsp--;

					PtGen.pt(2);
					pushFollow(FOLLOW_ptvg_in_consts361);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt13 >= 1 ) break loop13;
					EarlyExitException eee = new EarlyExitException(13, input);
					throw eee;
				}
				cnt13++;
			}

			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "consts"



	// $ANTLR start "vars"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:1: vars : 'var' ( type ident ( ',' ident )* ptvg )+ ;
	public final void vars() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:7: ( 'var' ( type ident ( ',' ident )* ptvg )+ )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:9: 'var' ( type ident ( ',' ident )* ptvg )+
			{
			match(input,53,FOLLOW_53_in_vars381); 
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:15: ( type ident ( ',' ident )* ptvg )+
			int cnt15=0;
			loop15:
			while (true) {
				int alt15=2;
				int LA15_0 = input.LA(1);
				if ( (LA15_0==26||LA15_0==33) ) {
					alt15=1;
				}

				switch (alt15) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:17: type ident ( ',' ident )* ptvg
					{
					pushFollow(FOLLOW_type_in_vars385);
					type();
					state._fsp--;

					pushFollow(FOLLOW_ident_in_vars387);
					ident();
					state._fsp--;

					 PtGen.pt(1); PtGen.pt(9); 
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:58: ( ',' ident )*
					loop14:
					while (true) {
						int alt14=2;
						int LA14_0 = input.LA(1);
						if ( (LA14_0==13) ) {
							alt14=1;
						}

						switch (alt14) {
						case 1 :
							// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:68:60: ',' ident
							{
							match(input,13,FOLLOW_13_in_vars393); 
							pushFollow(FOLLOW_ident_in_vars396);
							ident();
							state._fsp--;

							 PtGen.pt(1); PtGen.pt(9); 
							}
							break;

						default :
							break loop14;
						}
					}

					pushFollow(FOLLOW_ptvg_in_vars403);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt15 >= 1 ) break loop15;
					EarlyExitException eee = new EarlyExitException(15, input);
					throw eee;
				}
				cnt15++;
			}

			 PtGen.pt(91); 
			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "vars"



	// $ANTLR start "type"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:71:1: type : ( 'ent' | 'bool' );
	public final void type() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:71:7: ( 'ent' | 'bool' )
			int alt16=2;
			int LA16_0 = input.LA(1);
			if ( (LA16_0==33) ) {
				alt16=1;
			}
			else if ( (LA16_0==26) ) {
				alt16=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}

			switch (alt16) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:71:9: 'ent'
					{
					match(input,33,FOLLOW_33_in_type422); 
					PtGen.pt(7);
					}
					break;
				case 2 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:72:9: 'bool'
					{
					match(input,26,FOLLOW_26_in_type435); 
					PtGen.pt(8);
					}
					break;

			}
		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "decprocs"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:75:1: decprocs : ( decproc ptvg )+ ;
	public final void decprocs() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:75:9: ( ( decproc ptvg )+ )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:75:11: ( decproc ptvg )+
			{
			 PtGen.pt(124); 
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:75:30: ( decproc ptvg )+
			int cnt17=0;
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( (LA17_0==47) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:75:31: decproc ptvg
					{
					pushFollow(FOLLOW_decproc_in_decprocs452);
					decproc();
					state._fsp--;

					pushFollow(FOLLOW_ptvg_in_decprocs454);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt17 >= 1 ) break loop17;
					EarlyExitException eee = new EarlyExitException(17, input);
					throw eee;
				}
				cnt17++;
			}

			 PtGen.pt(125); 
			}

		}

		catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decprocs"



	// $ANTLR start "decproc"
	// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:78:1: decproc : 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps ;
	public final void decproc() throws RecognitionException {
		try {
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:78:9: ( 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps )
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:78:12: 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps
			{
			match(input,47,FOLLOW_47_in_decproc472); 
			pushFollow(FOLLOW_ident_in_decproc475);
			ident();
			state._fsp--;

			PtGen.pt(40);
			// H:\\windows\\git\\Compilation\\COMP_PROJET\\src\\projet.g:78:42: ( parfixe )?
			int alt18=2;
			int LA18_0 = input.LA(1);
			if ( (LA18_0==40) ) {
				alt18=1;
			}
			switch (alt18) {
				case 1 :
